# mycoai_projects

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  docker-compose.dev.yml  docker-compose.yml  mise.toml  skills-lock.json  species_weights.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/.github/workflows/: ci.yml
backend/.opencode/: opencode.json
backend/docs/: test-plan.md
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_media_fks_feedback.py  0002_add_media_image_fks_feedback.py  0003_add_system_state.py  0004_add_invite_tokens.py  0005_add_missing_columns.py
backend/scripts/: IMPORT_INSTRUCTIONS.md  create_dataowner.py  import_dto.py  ingest_original_prepared.py  reindex_segments.py  reset_database.py  sync_qdrant_to_sql.py  sync_research_yolo_to_product.py
backend/src/backend/: auth.py  celery_app.py  config.py  create_owner.py  db.py  image_models.py  main.py  routes.py  segmentation.py
backend/src/core/: security.py
backend/src/mycoai_retrieval_backend/: app.py  celery_app.py  config.py  create_owner.py  database.py  image_models.py  image_processing.py  main.py  (+3 more)
backend/tests/: conftest.py  test_api.py  test_api_deep.py  test_api_media.py  test_audit.py  test_auth_flow.py  test_batch_pipeline.py  test_batch_zip.py  test_core.py  test_delete_impacts.py  test_e2e_import.py  test_error_format.py  test_exceptions.py  test_health.py  test_image_models.py  test_image_processing.py  test_import_dto.py  test_ingest_original_prepared.py  test_integration_api.py  test_integration_redis.py  test_middleware.py  test_models.py  test_models_image.py  test_models_media.py  test_qdrant.py  test_qdrant_sync_copy.py  test_rbac.py  test_repos.py  test_repos_media.py  test_schema_imports.py  test_schema_parity.py  test_schemas.py  test_schemas_extra.py  test_segmentation_images.py  test_service_and_repo_imports.py  test_services.py  test_stack.py  test_sync_qdrant_to_sql.py  test_sync_research_yolo_to_product.py  test_weights_parity.py
research/: .flake8  .gitignore  README.md  docker-compose.yml  fpt_ai_cloud.yaml  pyproject.toml  requirements.txt  run_all.sh  shell.nix
research/.github/: copilot-instructions.md
research/.opencode/: opencode.json
research/docs/: ENSEMBLE_STRATEGY.md  RESEARCH_PROTOCOL.md  TERMINOLOGY.md
research/report/: graduation_research_plan.md  render_report.py
research/research/: do-not-repeat.md  paper-ideas.md  results.tsv
research/resources/: vast.md
research/src/: colab_config.py  config.py  pipeline_segmentation.py  prepare.py  run.py
research/tests/: test_coco_to_yolo_seg.py  test_config_paths.py  test_csv_append.py  test_dataset_eda.py  test_dataset_preparation.py  test_experiment_contract.py  test_finetune_feature_integration.py  test_fold_manifests.py  test_planner_queue.py  test_reporter_output.py  test_research_notebook.py  test_strain_holdout_finetune.py  test_threshold_full_classes.py  test_train_strain_holdout_behavior.py  test_worker_isolation.py  test_yolo_crop_dataset.py  test_yolo_cross_validation.py  test_yolo_dataset_pipeline.py  test_yolo_dataset_tools.py  test_yolo_visualization.py
research/tools/: crop_yolo_segments.py  export_yolo_dataset.py  render_fold_bbox_images.py
(+916 files in other folders)
