[project]
name = "mycoai-retrieval-backend"
version = "0.1.0"
description = "FastAPI backend for MycoAI retrieval services"
readme = "README.md"
authors = [
    { name = "datamonsterr", email = "phamthanhdat17092004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "celery>=5.5.1",
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "numpy>=2.3.4",
    "opencv-python-headless>=4.11.0.86",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.7",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.0",
    "redis>=5.2.1",
    "scikit-learn>=1.9.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
mycoai-retrieval-backend = "mycoai_retrieval_backend.main:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["mycoai_retrieval_backend"]

[tool.mypy]
python_version = "3.13"
strict = false
packages = ["mycoai_retrieval_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "integration_postgres: requires PostgreSQL connection",
    "integration_redis: requires Redis connection",
    "integration_qdrant: requires Qdrant connection",
]
